smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/strings/text-block-empty.smithy
// Syntax error at line 4, column 16: Error parsing text block: Text block is empty | Model
namespace smithy.example

@documentation("""""")
string MyString
